src/components/FAQ/Question/Question.module.scss
.questionContainer,
.questionContainerOpen {
  position: relative;
  align-self: stretch;
  background-color: hsla(0, 0%, 100%, 0.3);
  padding: 1rem 2rem 1rem 3.5rem;
  max-width: calc(50% - 1rem);
  overflow: hidden;
  cursor: pointer;
  transition: all 0.2s ease-in-out;

  &::before {
    position: absolute;
    top: 25px;
    left: 15px;
    content: "";
    width: 25px;
    height: 4px;
    transition: all 0.3s ease-in-out;
    background-color: var(--black);
    transform: translate(0) rotate(90deg);
  }

  &::after {
    position: absolute;
    top: 25px;
    left: 15px;
    content: "";
    width: 25px;
    height: 4px;
    transition: all 0.3s ease-in-out;
    background-color: var(--black);
    transform: translate(0);
  }

  &:last-child {
    margin-right: auto;
  }

  &:hover {
    background-color: hsla(0, 0%, 100%, 0.2);

    &::before,
    &::after {
      background-color: var(--white);
    }
  }
}

.questionContainer {
  max-height: 3.5rem;
}

.questionContainerOpen {
  max-height: 15rem;

  &::before {
    transform: translate(0) rotate(-180deg);
  }

  &::after {
    transform: translate(0);
  }

  &::before,
  &::after {
    background-color: var(--white);
  }
}

.questionInnerContainer {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 2rem;
}

.questionIcon {
  margin-top: -1rem;
}

.question {
  font-family: "AlegreyaSans", sans-serif;
  font-size: clamp(1.1rem, 2vw, 1.4rem);
  margin-bottom: 1rem;
}

.answer {
  font-family: "Cabin", sans-serif;
  font-weight: 600;
  font-size: clamp(0.9rem, 2vw, 1.1rem);
}

